<resources>
    <string name="app_name">ShabaLink</string>

    <string name="main_text">ShabaLink!</string>
    <string name="headerText">Netology. Online University</string>
    <string name="timeTextview">23 May, 18:36</string>
    <string name="likesNum" translatable="false">5</string>
    <string name="repostNum" translatable="false">2</string>
    <string name="seenNum" translatable="false">500 K</string>
    <string name="longTexview">" Помогаем расти в профессии и открывать новые карьерные горизонты💫\n\n
        Нетология — это 4 уровня образования:\n\n
        ✅ для начинающих, которые хотят освоить актуальную профессию с нуля
        ✅ для специалистов, которые стремятся вырасти в карьере
        ✅ для руководителей, которые нацелены усилить лидерские навыки
        ✅ и для компаний, которым нужно обучить команду
        Маркетинг, дизайн, программирование, soft skills, MBA, управление проектами, аналитика и data science — выбирайте,
        что вам ближе и приходите к нам за знаниями и ростом.\n\n
        Перемены — всегда правильный выбор👌🏻   http://netolo.gy/fEU "</string>

    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_seen">Seen</string>
    <string name="description_post_save">Save</string>

    <string name="error_empty_content">Content cannot be empty</string>
    <string name="post_text">Enter text here</string>
    <string name="editText">Edit Message</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_remove">Remove</string>
    <string name="add_post">Add post</string>
    <string name="chooser_share_post">Share post</string>
    <string name="login_text">Log in</string>
    <string name="login_note_text">Please enter your login and password below</string>
    <string name="login_hint">Type your login (email address) here</string>
    <string name="pass_hint">Type your password here</string>
    <string name="log_in_button_text">Log in</string>
    <string name="reg_button_text">Registration</string>
    <string name="sign_out">Sign out</string>


    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="login_fail">User or password is incorrect</string>
    <string name="login_success">Success! Now try to log in</string>
    <string name="go_to_post_feed">go to post feed</string>
    <string name="events_header">Events List</string>
    <string name="posts_list">Posts list</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>

    <string name="error_dialog_auth_internet">No internet connection</string>
    <string name="error_dialog_auth_server">Server is unavalable</string>
    <string name="error_dialog_auth_success">Authorization succeeded</string>
    <string name="error_dialog_auth_nouser">Cannot find such user</string>
    <string name="error_dialog_auth_incpass">Incorrect password</string>
    <string name="error_dialog_auth_server_error">Server has returned error (500)</string>



    <string name="tab_text_1">Users</string>
    <string name="tab_text_2">Posts</string>
    <string name="tab_text_3">Events</string>
    <string name="tab_text_4">About</string>
    <string name="tab_text_0">My page</string>

    <string name="loading">LOADING...</string>
    <string name="proceed">work offline</string>
    <string name="name_hint">Type your name for registration</string>




    <string name="login_first">To see your page login first</string>
    <string name="click_refresh">Error occured. Pull the page down to refresh</string>
    <string name="see_my_events">edit my events</string>
    <string name="aboutLink">To see what this application is about, click About tab</string>
    <string name="enter_dialog">Authorization</string>
    <string name="seeEvents"><u>see events</u></string>
    <string name="empty_records">No records</string>
    <string name="error_occured">Error occured during data fetching</string>
    <string name="error_loading">Error loading data</string>
    <string name="retry_loading">Retry</string>
    <string name="menu_save">Save</string>
    <string name="enter_anything">Enter anything to save</string>
    <string name="post_soon">Your post will appear soon</string>
    <string name="edit_post">Edit post</string>
    <string name="new_post">New post</string>
    <string name="write_your_post">Write your post</string>
    <string name="login_first_action">Please log in</string>


    <string name="format">Format: %1$s</string>
    <string name="organizators">"Organizators: %1$s"</string>
    <string name="toParticipate">Participate</string>
    <string name="you_going_to">You going to participate</string>
    <string name="downloading">downloading...</string>
    <string name="choose_app">Choose application</string>
    <string name="see_events">Events</string>
    <string name="new_event">New Event</string>
    <string name="event_soon">Your event will appear soon</string>
    <string name="edit_event">Edit Event</string>
    <string name="event_types">Event types</string>
    <string name="pick_up_a_date">Pick up a date</string>
    <string name="offline">offline</string>
    <string name="online">online</string>
    <string name="event_link">Event link</string>
    <string name="insert_a_link_here">Insert a link here</string>


</resources>