<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/common_spacing">

    <ImageView
        android:id="@+id/icon_imageView"
        android:layout_width="@dimen/posts_avatar_size"
        android:layout_height="@dimen/posts_avatar_size"
        android:layout_marginBottom="@dimen/common_spacing"
        android:contentDescription="@string/description_post_author_avatar"
        android:src="@drawable/ic_netology_logo_foreground"
        app:layout_constraintBottom_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@sample/posts.json/data/authorAvatar" />

    <TextView
        android:id="@+id/headerTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/timeTextView"
        app:layout_constraintEnd_toStartOf="@id/moreButton"
        app:layout_constraintStart_toEndOf="@id/icon_imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/timeTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:layout_marginBottom="@dimen/common_spacing"
        app:layout_constraintBottom_toBottomOf="@id/header"
        app:layout_constraintEnd_toStartOf="@id/moreButton"
        app:layout_constraintStart_toEndOf="@id/icon_imageView"
        app:layout_constraintTop_toBottomOf="@id/icon_imageView"
        tools:text="@sample/posts.json/data/published" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/moreButton"
        style="@style/Widget.AppTheme.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/description_post_menu"
        app:icon="@drawable/ic_baseline_more_vert_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="icon_imageView,timeTextView,moreButton" />

    <TextView
        android:id="@+id/longTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:lineSpacingMultiplier="1.5"
        android:paddingTop="@dimen/common_spacing"
        android:paddingBottom="@dimen/common_spacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        tools:text="@sample/posts.json/data/content" />


    <ImageButton
        android:id="@+id/videoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/video_view_button_foreground"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/longTextView"
        app:layout_constraintBottom_toTopOf="@+id/footer"

        />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="videoButton" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/likeButton"
        style="@style/Widget.AppTheme.LikeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:checkable="true"
        android:contentDescription="@string/description_post_like"
        app:icon="@drawable/ic_like_24dpi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/footer"
        tools:checked="@sample/posts.json/data/likedByMe"
        tools:text="@sample/posts.json/data/likes" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/repostButton"
        style="@style/Widget.AppTheme.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_post_share"
        app:icon="@drawable/ic_baseline_share_24"
        app:layout_constraintStart_toEndOf="@id/likeButton"
        app:layout_constraintTop_toBottomOf="@id/footer"
        tools:text="@sample/posts.json/data/reposts" />

    <ImageButton
        android:id="@+id/seenButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/description_post_seen"
        app:layout_constraintBottom_toBottomOf="@+id/repostButton"
        app:layout_constraintStart_toEndOf="@+id/repostButton"
        app:layout_constraintTop_toTopOf="@+id/repostButton"
        app:srcCompat="@drawable/ic_baseline_remove_red_eye_24" />

    <TextView
        android:id="@+id/seenNumTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seenNum"
        app:layout_constraintBottom_toBottomOf="@+id/seenButton"
        app:layout_constraintStart_toEndOf="@+id/seenButton"
        app:layout_constraintTop_toTopOf="@+id/seenButton" />




</androidx.constraintlayout.widget.ConstraintLayout>